# AccessiWeather

./: .augment-guidelines  .auto-claude-security.json  .bandit  .claude_settings.json  .coverage  .coveragerc  .flake8  .gitattributes  .gitignore  .gitmessage  .isort.cfg  .pre-commit-config.yaml  .secrets.sample  AGENTS.md  BETA_RELEASE.md  BETA_TESTING.md  CACHE_ISSUE_ANALYSIS.md  CHANGELOG.md  CICD_ENHANCEMENTS.md  CI_CD_FIX_SUMMARY.md  CI_STATUS.md  CLAUDE.md  CONTRIBUTING.md  FEATURE_WEATHER_HISTORY.md  GITHUB_APP_SETUP.md  HOURLY_AQI_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INTEGRATION_TESTS_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_SUMMARY.md  PR_BODY.md  PR_DESCRIPTION.md  README.md  RELEASE_README.md  SOUNDPACK_FIX_SUMMARY.md  STARTUP_SCRIPTS.md  TESTING.md  (+101 more)
.artiforge/: PR_DESCRIPTION.md  plan-improve-alert-notification-handling.md  plan-technical-debt-elimination.md  plan-weather-fetch-optimization.md
.artiforge/reports/: baseline-coverage.json  complexity-report.json  complexity-summary.txt  ruff-analysis.txt  step1-baseline-report.md  step13-dead-code-removal-report.md  step14-quality-gates-report.md  step2-backend-detection-report.md  step4-coverage.json  step4-redundant-tests-report.md  step5-static-analysis-report.md  step6-complete-refactoring-report.md  step6-refactoring-function1-report.md  (+3 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  release.yml
.memex/: accessiweather_project_patterns.md  rules.md
.planning/: ROADMAP.md  STATE.md
.taskmaster/: state.json
.venv-test/: pyvenv.cfg
beeware-venv/: pyvenv.cfg
config/: locations.json
docs/: ACCESSIBILITY.md  GITHUB_BACKEND_SETUP.md  MIGRATION_GUIDE.md  README.md  SECURITY.md  SIGNATURE_VERIFICATION.md  SOUND_PACKS.md  SOUND_PACK_SYSTEM.md  UPDATE_SYSTEM.md  _config.yml  ai-bug-debug-report.md  ai-weather-explanations-prd.md  alert_audit_report.md  architecture.md  bmm-workflow-status.yaml  build-info.json  build_and_artifacts.md  cicd_architecture.md  cicd_implementation_summary.md  cicd_setup.md  coverage_improvement_plan.md  coverage_strategy.md  debug_mode.md  deployment-guide.md  developer_guide.md  development-guide.md  download-links.md  git-workflow.md  github_actions.md  implementation_plan.md  index.html  index.md  index.template.html  integrating_weather_history.md  legacy-toga-migration.md  main-window-navigation.md  nationwide_discussions.md  nationwide_forecast_integration.md  nationwide_settings.md  nationwide_view.md  (+14 more)
examples/: README.md  hourly_aqi_example.py  weather_history_demo.py
installer/: AccessiWeather.iss  README.md  __init__.py  accessiweather.iss  accessiweather.spec  build.py  build_installer.bat  build_installer.ps1  build_installer.sh  build_nuitka.py  create_icons.py  install_dependencies.ps1  make.py  nuitka_entry.py  spec_utils.py
openapi_generator_evaluation/: final_recommendation.md  nws_api_integration_example.py  test_nws_client.py
scripts/: briefcase_hooks.py  build_pages.py  changelog_tools.py  check_streams.py  embed_credentials.py  find_toga_backend_issues.py  generate_build_info.py  generate_build_meta.py  generate_version.py  pages_utils.py  prd.txt  prd1.txt  run-unit-tests.sh  run_tests.py  smoke_download_test.py  task-complexity-report.json  test_config.py  test_fast.py
src/accessiweather/open_meteo_api_client/: README.md  pyproject.toml
src/accessiweather/open_meteo_api_client/open_meteo_forecast_archive_api_accessi_weather_sketch_client/: __init__.py
src/accessiweather/open_meteo_api_client/open_meteo_forecast_archive_api_accessi_weather_sketch_client/api/default/: get_archive.py  get_forecast.py
src/accessiweather/open_meteo_api_client/open_meteo_forecast_archive_api_accessi_weather_sketch_client/models/: __init__.py  archive_daily_data.py  archive_daily_units.py  archive_response.py  current_data.py  current_units.py  daily_data.py  daily_units.py  forecast_response.py  get_archive_temperature_unit.py  get_forecast_precipitation_unit.py  get_forecast_temperature_unit.py  get_forecast_wind_speed_unit.py  hourly_data.py  hourly_units.py  open_meteo_error.py
src/accessiweather/visual_crossing_api_client/: README.md  pyproject.toml
src/accessiweather/visual_crossing_api_client/visual_crossing_timeline_api_accessi_weather_sketch_client/: __init__.py
src/accessiweather/visual_crossing_api_client/visual_crossing_timeline_api_accessi_weather_sketch_client/api/default/: get_timeline.py
src/accessiweather/visual_crossing_api_client/visual_crossing_timeline_api_accessi_weather_sketch_client/models/: __init__.py  current_conditions.py  day_forecast.py  error_response.py  get_timeline_unit_group.py  hour_forecast.py  timeline_response.py  weather_alert.py
tasks/: tasks.json
test_config/: accessiweather.json
tests/: FAULTHANDLER.md  README.md  TASK_75_5_COMPLETION_SUMMARY.md  TOGA_TEST_SUITE_SUMMARY.md  __init__.py  api_client_test_utils.py  api_wrapper_test_utils.py  ci_config.json  conftest.py  conftest.py.backup  conftest_service_classes.py  faulthandler_setup.py  gui_test_fixtures.py  integration_test_final_report.md  integration_test_plan.md  integration_test_results.md  memory_tracker.py  mock_data.py  pytest_missing_files_plugin.py  run_integration_tests.py  temp_fix.py  test_accessible_combo_box.py  test_additional_coverage.py  test_ai_explainer.py  test_ai_explainer_integration.py  test_ai_explainer_text_product.py  test_ai_prompt_customization.py  test_ai_tools.py  test_ai_tools_extended.py  test_ai_tools_formatters.py  test_air_quality_dialog.py  test_air_quality_integration.py  test_air_quality_presentation.py  test_alert_accessibility.py  test_alert_aggregator.py  test_alert_constants.py  test_alert_dialog_combined_text.py  test_alert_dialog_copy_integration.py  test_alert_dialog_copy_text.py  test_alert_dialog_dispatch.py  (+450 more)
tools/: find_alert_zones.py
tuf_repo/: .tufup-repo-config  README.md  repo_add_bundle.py  repo_init.py  repo_settings.py  setup_app_metadata.py
(+1608 files in other folders)
