[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "accessiweather"
version = "0.9.4-dev"
description = "AccessiWeather: An accessible weather application that includes NOAA and Open-Meteo support with focus on screen reader compatibility"
authors = [
    { name = "Orinks" }
]
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "wxPython",
    "requests",
    "plyer",
    "geopy",
    "python-dateutil",
    "beautifulsoup4",
    "httpx>=0.20.0",
    "attrs>=22.2.0",
    "psutil"
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "requests-mock",
    "types-requests",
    "PyInstaller"
]

[project.scripts]
accessiweather = "accessiweather.cli:main"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | src/accessiweather/weather_gov_api_client/models
  | src/accessiweather/weatherapi_client
)/
'''

[tool.pyright]
include = ["src", "tests"]
exclude = ["venv", "build", "dist", "htmlcov", "**/__pycache__", "**/*.egg-info", "src/accessiweather/weather_gov_api_client/models", "src/accessiweather/weatherapi_client"]
ignore = ["venv/**", "build/**", "dist/**"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.12"
pythonPlatform = "Windows"
