[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "accessiweather"
version = "0.6.1.dev0"
description = "AccessiWeather: An accessible weather application with NOAA and Open-Meteo support, built with wxPython for screen reader compatibility"
authors = [
    { name = "Orinks" }
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "wxPython>=4.2.5",
    "gui_builder @ git+https://github.com/accessibleapps/gui_builder.git",
    "sound_lib @ git+https://github.com/accessibleapps/sound_lib.git",
    "platform-utils>=1.6.0",  # sound_lib dep; >=1.6 needed for Python 3.12+ (no imp module)
    "desktop-notifier",
    "toasted; sys_platform == 'win32'",
    "python-dateutil",
    "beautifulsoup4",
    "httpx>=0.20.0",
    "attrs>=22.2.0",
    "psutil",
    "keyring",
    "openai>=1.0.0",
    "playsound3",
    "prismatoid>=0.7.0",
    "tzdata",
    "cryptography>=42.0.0",
    "Unidecode>=1.3.8",
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-xdist>=3.0.0",
    "pytest-recording>=0.13.0",
    "pytest-rerunfailures>=12.0",
    "hypothesis>=6.0.0",
    "vcrpy>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.0.0",
    "pyright",
]
build = [
    "nuitka>=4.0.8",
    "pillow>=10.0.0",
]
[project.scripts]
accessiweather = "accessiweather.main:main"

[project.gui-scripts]
accessiweather-gui = "accessiweather.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

# Cache configuration
cache-dir = ".ruff_cache"
respect-gitignore = true

# Exclude auto-generated and build directories
exclude = [
    # VCS & IDE
    ".git",
    ".github",
    ".idea",
    ".vscode",

    # Python caches & coverage
    "__pycache__",
    "**/__pycache__/",
    ".pytest_cache",
    "**/.pytest_cache/",
    ".mypy_cache",
    "**/.mypy_cache/",
    ".ruff_cache",
    "**/.ruff_cache/",
    ".coverage",
    "coverage.xml",
    "htmlcov",

    # Virtual environments (any name/prefix)
    ".venv",
    ".venv-wsl",
    ".venv*",
    "venv",
    "venv*",
    "env",
    "env*",
    "**/.venv*/",
    "**/venv*/",
    "**/env*/",

    # Build & dist artifacts
    "build",
    "dist",
    "*.egg-info",
    ".eggs",
    "*.dist-info",
    "src/accessiweather.dist-info",
    "installer/build",
    "installer/dist",

    # Project-specific generated content
    "src/accessiweather/weather_gov_api_client",
    "src/accessiweather/weatherapi_client",
    "docs",
    "temp_backup",
    "accessiweather.log",
    "*.log",

    # Third-party (if present)
    "node_modules"
]

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
# Also enable isort (`I`), pydocstyle (`D`), and other useful rules
select = ["E", "W", "F", "I", "D", "UP", "B", "C4", "PIE", "SIM", "RET"]
ignore = [
    "E203",   # whitespace before ':'
    "E501",   # line too long (handled by formatter)
    "F541",   # f-string is missing placeholders
    "C901",   # too complex (we'll handle this gradually)
    "D203",   # No blank line before class docstring; prefer D211 instead
    "D212",   # Use D213 convention for multi-line docstrings
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "UP042",  # Keep str, Enum classes stable instead of switching public enum bases
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files
"src/accessiweather/weatherapi_client/client.py" = ["F401", "F541", "F811", "E741"]
"src/accessiweather/weatherapi_mapper.py" = ["F401"]
"tests/test_logging_config.py" = ["SIM117"]
"tests/test_smart_auto_properties.py" = ["D205", "D400", "D415", "E402", "F841"]

[tool.ruff.lint.isort]
# Black-compatible settings
combine-as-imports = true
force-wrap-aliases = true
split-on-trailing-comma = true

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"
# Indent with spaces, rather than tabs.
indent-style = "space"
# Respect magic trailing commas.
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.coverage.run]
omit = [
    "*/weather_gov_api_client/*",
    "*/accessiweather/ui/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if sys.platform",
]
